Fix error when a group has no visible children
Also small fix for flickering cursor on edge drag.

--- a/packages/react-styles/src/css/components/Topology/topology-components.css
+++ b/packages/react-styles/src/css/components/Topology/topology-components.css
@@ -409,6 +409,9 @@
   stroke: var(--edge--active--stroke);
 }
 
+.pf-topology__edge.pf-m-dragging {
+  pointer-events: none;
+}
 .pf-topology__edge.pf-m-dragging .pf-topology__edge__link,
 .pf-topology__edge.pf-m-dragging .pf-topology-connector-arrow {
   stroke: var(--edge--interactive--stroke);
